# latam-investment-research-agent

./: .coverage  .env.example  .env.sample  README.md  pyproject.toml
.github/workflows/: ci.yml
exports/: 20260523_183601_what_were_total_export_revenues_by_year_.csv  20260523_183937_what_were_total_export_revenues_by_year_.csv
exports/report_jobs/report_01c5b116a451/: 20260523_203356_which_brazilian_coffee_exporter_looks_th.csv
exports/report_jobs/report_3a2535635dbb/: 20260523_213741_what_is_the_most_promising_looking_coffe.csv
exports/report_jobs/report_530b0529c631/: 20260523_211121_what_is_the_most_promising_looking_coffe.csv
exports/report_jobs/report_6888d6b9ed49/: 20260523_201645_what_were_total_export_revenues_by_year.csv
exports/report_jobs/report_93b27383427f/: 20260523_210212_what_is_the_most_promising_looking_coffe.csv
exports/report_jobs/report_94fef5f2a2ca/: 20260523_212513_what_is_the_most_promising_looking_coffe.csv
exports/report_jobs/report_95ab71186b30/: 20260523_201717_what_were_total_export_revenues_by_year_.csv
exports/report_jobs/report_b2e1c49fbb03/: 20260523_212119_what_is_the_most_promising_looking_coffe.csv
exports/report_jobs/report_db1bd14794b5/: 20260523_210528_what_is_the_most_promising_looking_coffe.csv
frontend/: .env.example
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/lib/: research-api.ts
frontend/src/routes/: __root.tsx  api.tsx  contact.tsx  index.tsx  methodology.tsx  research.tsx
samples/: generate_report.py  ingest.py  ingest_from_url.py  query.py  research_and_ingest.py  research_and_ingest_numeric.py
scripts/: demo_retrieval.py
src/latam_investment_research_agent/: env.py  main.py
src/latam_investment_research_agent/agents/: __init__.py
src/latam_investment_research_agent/api/: __init__.py  app.py  deps.py
src/latam_investment_research_agent/schemas/: __init__.py  research.py
src/latam_investment_research_agent/services/: analytics_ingestion.py  report_job_store.py  report_quantitative_fallback.py  research_and_ingest.py  research_pipeline.py  research_report_orchestrator.py  (+2 more)
tests/: test_smoke.py
tests/api/: test_research_api.py  test_research_report_jobs.py
tests/services/: test_analytics_ingestion.py  test_report_job_store.py  test_report_quantitative_fallback.py  test_research_report_pdf.py  test_semantic_storage_ingestion.py  test_semantic_storage_ingestion_errors.py
(+121 files in other folders)
