[project]
name = "latam-investment-research-agent"
version = "0.1.0"
description = "An investment research agent for emerging markets in Latin America"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Kyle Spinelli" }
]
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0"
]


[project.scripts]
latam_investment_research_agent = "latam_investment_research_agent.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
