[project]
name = "latam-investment-research-agent"
version = "0.1.0"
description = "An investment research agent for emerging markets in Latin America"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Kyle Spinelli" }
]
dependencies = [
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "clickhouse-connect>=0.8",
  "pdfplumber>=0.11",
  "httpx>=0.28.0",
  "beautifulsoup4>=4.12",
  "polars>=1.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.5",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.13.5",
  "x402[fastapi]>=2.11.0",
  "matplotlib>=3.9",
  "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]


[project.scripts]
latam_investment_research_agent = "latam_investment_research_agent.main:main"
latam-api = "latam_investment_research_agent.main:run_api"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=latam_investment_research_agent --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src", "tests"]
